# audirs

./: Cargo.toml  README.md  flake.nix  package.json
audirs/: config.json
src/: main.rs  settings.rs  types.rs  validate.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  settings.rs  targets.rs  types.rs  validate.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/dsp/: formants.rs
src/audio/: mod.rs
src/dsp/: mod.rs
src/lib/: api.ts  store.svelte.ts  theme.ts
src/lib/components/: EChart.svelte  FormantScatter.svelte  InBandGrid.svelte  MetricTrend.svelte  PitchRibbon.svelte  WeightBar.svelte
src/routes/: +page.svelte
src/ui/: mod.rs
