[package]
name = "audirs"
version = "0.1.0"
description = "Voice Trainer — realtime pitch / formant / weight feedback"
authors = ["hiibolt"]
edition = "2021"

[lib]
name = "audirs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- audirs DSP core (ported from the egui PoC, pinned) ---
cpal = "=0.18.1"            # realtime mic capture
rtrb = "=0.3.4"            # lock-free SPSC ring buffer (audio -> worker)
loqa-voice-dsp = "=0.5.0"  # pitch (pYIN) + H1-H2
symphonia = { version = "=0.5.4", features = ["mp3", "vorbis", "ogg", "wav", "pcm"] }
